--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>.::LILA DOWNS::.</title>
-  <link rel="stylesheet" href="CSS/estiloprincipal.css">
+  <link rel="stylesheet" href="CSS/EstiloPrincipal.css">
   <link rel="stylesheet" href="CSS/slider.css">
   <link rel="stylesheet" href="CSS/detalles.css">
   <link rel="stylesheet" href="CSS/galeria.css">
