--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>.::LILA DOWNS::.</title>
-    <link rel="stylesheet" href="css/estiloprincipal.css">
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="CSS/EstiloPrincipal.css">
+    <link rel="stylesheet" href="CSS/slider.css">
   </head>
   <body>
   <div class="contenedor">
