--- a/biografia.html
+++ b/biografia.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>.::LILA DOWNS::.</title>
-  <link rel="stylesheet" href="css/estiloprincipal.css">
-  <link rel="stylesheet" href="css/slider.css">
-  <link rel="stylesheet" href="css/detalles.css">
+  <link rel="stylesheet" href="CSS/EstiloPrincipal.css">
+  <link rel="stylesheet" href="CSS/slider.css">
+  <link rel="stylesheet" href="CSS/detalles.css">
 </head>
 <body>
 <div class="contenedor">
