--- a/biografia.html
+++ b/biografia.html
@@ -36,7 +36,7 @@
     <section>
       <article>
         <h1>Ana Lila Downs</h1>
-        <img class"radius" src="imagenes/lila..jpg">
+        <img class"radius" src="imagenes/Lila..jpg">
         <p><b>Lila Downs</b>, Nació el 19 de septiembre de 1968 en Heroica Ciudad de Tlaxiaco, Oaxaca, México. Canta en diversos idiomas, principalmente en español.
 <p>Es hija de la cantante Anita Sánchez, una mujer indígena mixteca y de Allen Downs, un profesor de cinematografía estadounidense originario de Minnesota.
 <p>Lila Downs tiene ascendencia mixteca y estadounidense en forma más distante, también zapoteca, y fue criada como católica apostólica.
